Require Jenkins 2.479.1 and Jakarta EE 9 (#427)
Co-authored-by: strangelookingnerd <strangelookingnerd@users.noreply.github.com>